# pdfepub

./: .gitignore  README.md  Voyage voyage_sertifikuota.epub  pyproject.toml  requirements.txt
src/: cli.py  pipeline.py
src/llm/: client.py  prompts.py
src/models/: __init__.py  document.py  layout.py  page.py
src/stage1_pdf_analyzer/: analyzer.py
src/stage2_layout_detector/: detector.py
src/stage3_content_extractor/: extractor.py
src/stage4_structure_builder/: builder.py
src/stage5_epub_generator/: css_builder.py  generator.py  nav_builder.py  ncx_builder.py  opf_builder.py  xhtml_builder.py
src/stage6_quality_checker/: checker.py
